[gd_scene load_steps=2 format=2]

[ext_resource path="res://inventory/InventoryUI.gd" type="Script" id=1]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ItemList" type="ItemList" parent="."]
margin_right = 330.0
margin_bottom = 560.0
fixed_icon_size = Vector2( 32, 32 )

[node name="QuantityList" type="ItemList" parent="."]
margin_left = 330.0
margin_right = 410.0
margin_bottom = 560.0
fixed_icon_size = Vector2( 32, 32 )

[node name="MoneyPanel" type="Panel" parent="."]
margin_top = 560.0
margin_right = 410.0
margin_bottom = 600.0

[node name="MoneyLabel" type="Label" parent="MoneyPanel"]
margin_right = 90.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Money: 0"
align = 1
valign = 1

[node name="PotionLabel" type="Label" parent="MoneyPanel"]
margin_left = 210.0
margin_right = 410.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Potions Unlocked: 0/13"
align = 1
valign = 1

[node name="GoalLabel" type="Label" parent="MoneyPanel"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Goal: 1000"
align = 1
valign = 1

[node name="InstructionPanel" type="Panel" parent="."]
margin_left = 790.0
margin_top = 450.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="InstructionLabel" type="RichTextLabel" parent="InstructionPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 234.0
margin_bottom = 150.0
text = "L CLICK: Select items from the list

SPACE: Carry item (exit the menu -> [E] to put in the cauldron)

TAB: Exit menu"
[connection signal="item_activated" from="ItemList" to="." method="_on_ItemList_item_activated"]
